# odoo-operator

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml  release.yaml
charts/odoocluster/: Chart.yaml  README.md  production-ha.yaml  values-aws.yaml  values-production.yaml  values.yaml
charts/odoocluster/examples/: production-ha.yaml
charts/odoocluster/templates/: _helpers.tpl  ingress.yaml  odoocluster.yaml  secrets.yaml
charts/operator/: Chart.yaml  README.md  values.yaml
charts/operator/templates/: _helpers.tpl  deployment.yaml  rbac.yaml  serviceaccount.yaml
charts/operator/templates/crds/: odoocluster-crd.yaml
config/: manager.yaml  rbac.yaml
crds/: odoocluster-crd.yaml
examples/: acme-corp.yaml  minimal.yaml  with-addons.yaml
scripts/: create-cloudflare-tunnel-secret.sh  create-deploy-key.sh  create-secrets.sh  install.sh  uninstall.sh
src/: __init__.py  main.py
src/handlers/: __init__.py  cloudflare.py  cluster.py  database.py  db_init.py  filestore_backup.py  metabase.py  module_sync.py  namespace.py  odoo.py  tailscale.py  valkey.py
